--- a/퍼니처랩최종/css/style.css
+++ b/퍼니처랩최종/css/style.css
@@ -179,8 +179,9 @@ h2 {
 
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
+
+    gap: 50px;
 }
 
 .brand-explain-content {
@@ -207,7 +208,7 @@ h2 {
 
 .brand-detail-explain::before {
     content: '';
-    height: 350px;
+    height: 300px;
     width: 2px;
     background-color: var(--accent-color);
     position: absolute;
