--- a/퍼니처랩최종/css/style.css
+++ b/퍼니처랩최종/css/style.css
@@ -149,7 +149,7 @@ h1 {
 
 .about {
     background-color: #f2f4ef;
-    padding: 50px 32px; 
+    padding: 80px 32px; 
 }
 
 
@@ -173,7 +173,6 @@ h2 {
 }
 
 .brand-explain {
-    /* height: 100vh; */
     max-width: 1200px;
     margin: 0 auto;
 
@@ -181,7 +180,7 @@ h2 {
     flex-direction: column;
     align-items: center;
 
-    gap: 50px;
+    gap: 60px;
 }
 
 .brand-explain-content {
@@ -227,7 +226,7 @@ h3 {
     flex-direction: column;
     justify-content: space-evenly;
     height: 100%;
-    padding: 40px 0;
+    padding: 30px 0;
     gap: 20px;
 
 }
@@ -262,6 +261,7 @@ h3 {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    padding: 60px 0;
 }
 
     /* flex: 1 1 0;
@@ -316,7 +316,7 @@ h6 {
 
 
 #showroom {
-    padding: 100px 32px;
+    padding: 60px 32px;
     position: relative;
     overflow: hidden;
 }
@@ -326,8 +326,8 @@ h6 {
     width: 500px;
     aspect-ratio: 1;
     position: absolute;
-    top: 0;
-    left: -3%;
+    top: -3%;
+    left: 0%;
     z-index: -1;
     background-image: url(../img/showroom\ 나뭇잎.png);
     background-size: contain;
@@ -343,6 +343,7 @@ h6 {
     right: 2%;
     z-index: -1;
     background-image: url(../img/showroom\ 나뭇잎.png);
+    background-repeat: no-repeat;
     background-size: contain;
     transform: rotate(200deg);
 }
@@ -379,10 +380,10 @@ h6 {
     text-align: end;
 }
 
-.showroom-bamgasi-inform {
+.showroom-bamgasi-inform,
+.showroom-garage-inform {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
     justify-content: center;
     gap: 45px;
     height: 450px;
@@ -396,7 +397,7 @@ h6 {
     background: var(--accent-color);
     display: block;
     position: absolute;
-    top: 1px;
+    top: 11%;
     left: 90%;
 }
 
@@ -409,29 +410,8 @@ h6 {
     position: absolute;
     left: 50%;
     transform: rotate(270deg);
-    top: 34%;
+    top: 45%;
     margin-left: 50px;
-}
-
-.showroom-address p {
-    color: #222;
-    font-size: 16px;
-}
-
-h4 {
-    font-size: 24px;
-    font-weight: bold;
-    color: #222;
-}
-
-.showroom-garage-inform {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 450px;
-
-    gap: 45px;
-    position: relative;
 }
 
 .showroom-garage-inform::before {
@@ -441,7 +421,7 @@ h4 {
     background: var(--accent-color);
     display: block;
     position: absolute;
-    top: 0;
+    top: 9%;
     right: 92%;
 }
 
@@ -454,8 +434,19 @@ h4 {
     position: absolute;
     right: 50%;
     transform: rotate(270deg);
-    top: 34%;
+    top: 42%;
     margin-right: 50px;
+}
+
+.showroom-address p {
+    color: #222;
+    font-size: 16px;
+}
+
+h4 {
+    font-size: 24px;
+    font-weight: bold;
+    color: #222;
 }
 
 .more-view button {
@@ -477,7 +468,10 @@ h4 {
     border-color:#979696;
     border-width: 0.5px;
     transition: 0.3s;
+}
 
+.more-view {
+    width: 100%;
 }
 
 button > a {
@@ -490,21 +484,23 @@ button > a {
 
 #with-furniture {
     background-color: #edf1e9;
-    background-image: url(../img/with-furniture-꽃.png);
+    background-image: url(../img/with-furniture.png);
     background-size: cover;
     background-repeat: no-repeat;
-    /* background-size: 100% 100%; */
+    background-size: 90% 100%;
+    background-position-x: 50%;
 
 }
 
 .with-furniture-container {
     max-width: 1200px;
-    height: 100vh;
     margin: 0 auto;
 
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    gap: 60px;
+
+    padding: 80px 32px;
 
 }
 
@@ -531,7 +527,7 @@ button > a {
 }
 
 .with-furniture-icons a {
-    width: 225px;
+    width: 250px;
     aspect-ratio: 5/4;
     
     display: flex;
@@ -547,12 +543,13 @@ button > a {
     transition: 0.5s;
 }
 
-.with-furniture-icons h5 {
+h5 {
     color: #555;
+    font-size: 20px;
 }
 
 .with-furniture-icons p:last-child {
-    font-size: 14px;
+    font-size: 16px;
     line-height: 20px;
     text-align: center;
 }
@@ -655,7 +652,11 @@ button > a {
 .footer-bottom {
     display: flex;
     gap: 30px;
-    margin-top: 25px;
+    padding-top: 40px;
+}
+
+.footer-Mb {
+    text-align: center;
 }
 
 .footer-bottom a {
