--- a/css/style.css
+++ b/css/style.css
@@ -187,12 +187,14 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-shrink: 0;
     gap: 30px;
-
 }
 
-.brand-explain-content figure{
+.brand-img {
     width: 100%;
+    height: 100%
+    
 }
 
 .brand-detail-explain {
