--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ h2 {
 }
 
 .brand-explain-content {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -194,7 +195,6 @@ h2 {
 .brand-img {
     width: 100%;
     height: 100%
-    
 }
 
 .brand-detail-explain {
@@ -669,3 +669,36 @@ h5 {
 }
 
 
+
+
+
+/* .advantages-motto-fade-slides, 
+.content {
+    width: 100%;
+    height: 338px;
+    position: relative;
+  }
+
+  .slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 1;
+    transition: 1s;
+    color: #fff;
+    font-size: 48px;
+    box-sizing: border-box;
+  }
+
+  .showing {
+    opacity: 1;
+    z-index: 99;
+  }
+
+  .fade-slides > img {
+    width: 100%;
+    height: 100%;
+  } */
